# clean-links

./: .prettierignore  404.html  CONTRIBUTING.md  Makefile  README.md  clean.py  clearurls_config.json  config.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini  unshorten.py
.github/workflows/: main.yml
clean_links/: __init__.py  clean.py  clearurls.json  clearurls_config.json  config.py  normalize.py  unshorten.py
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_clean.py  test_foo.py  test_normalize.py  test_unshorten.py
tests/cassettes/test_unshorten/: test_expired_certificate_ignore.yaml  test_invalid_url_in_redirect_chain.yaml  test_multiple_redirect.yaml  test_resolve_to_mailto.yaml  test_single_redirect.yaml  test_unchanged.yaml
